// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoansSearch SearchBar tests should render search bar with query helper 1`] = `
<SearchBar
  currentQueryString=""
  executeSearch={[MockFunction]}
  onInputChange={[MockFunction]}
  placeholder="Search"
  queryHelperFields={
    Array [
      Object {
        "defaultValue": "\\"Doe, John\\"",
        "field": "authors.full_name",
        "name": "author",
      },
      Object {
        "field": "_created",
        "name": "created",
      },
    ]
  }
>
  <Input
    fluid={true}
    icon={
      <Icon
        as="i"
        circular={true}
        inverted={true}
        link={true}
        name="search"
        onClick={[MockFunction]}
      />
    }
    iconPosition="left"
    onChange={[Function]}
    onKeyPress={[Function]}
    placeholder="Search"
    size="massive"
    type="text"
    value=""
  >
    <div
      className="ui massive fluid left icon input"
    >
      <input
        onChange={[Function]}
        onKeyPress={[Function]}
        placeholder="Search"
        type="text"
        value=""
      />
      <Icon
        as="i"
        circular={true}
        inverted={true}
        link={true}
        name="search"
        onClick={[MockFunction]}
      >
        <i
          aria-hidden="true"
          className="search circular inverted link icon"
          onClick={[MockFunction]}
        />
      </Icon>
    </div>
  </Input>
  <QueryBuildHelper
    currentQueryString=""
    fields={
      Array [
        Object {
          "defaultValue": "\\"Doe, John\\"",
          "field": "authors.full_name",
          "name": "author",
        },
        Object {
          "field": "_created",
          "name": "created",
        },
      ]
    }
    updateQueryString={[MockFunction]}
  >
    <Grid>
      <div
        className="ui grid"
      >
        <GridRow
          columns={1}
        >
          <div
            className="one column row"
          >
            <GridColumn
              width={16}
            >
              <div
                className="sixteen wide column"
              >
                Search by: 
                <List
                  bulleted={true}
                  horizontal={true}
                >
                  <div
                    className="ui bulleted horizontal list"
                    role="list"
                  >
                    <ListItem
                      as="a"
                      key="authors.full_name"
                      onClick={[Function]}
                    >
                      <a
                        className="item"
                        onClick={[Function]}
                        role="listitem"
                      >
                        author
                      </a>
                    </ListItem>
                    <ListItem
                      as="a"
                      key="_created"
                      onClick={[Function]}
                    >
                      <a
                        className="item"
                        onClick={[Function]}
                        role="listitem"
                      >
                        created
                      </a>
                    </ListItem>
                  </div>
                </List>
              </div>
            </GridColumn>
          </div>
        </GridRow>
      </div>
    </Grid>
  </QueryBuildHelper>
</SearchBar>
`;

exports[`LoansSearch SearchBar tests should render the current query string 1`] = `
<SearchBar
  currentQueryString="The Gulf: The Making of An American Sea"
  executeSearch={[Function]}
  onInputChange={[Function]}
  placeholder="Search"
>
  <Input
    fluid={true}
    icon={
      <Icon
        as="i"
        circular={true}
        inverted={true}
        link={true}
        name="search"
        onClick={[Function]}
      />
    }
    iconPosition="left"
    onChange={[Function]}
    onKeyPress={[Function]}
    placeholder="Search"
    size="massive"
    type="text"
    value="The Gulf: The Making of An American Sea"
  >
    <div
      className="ui massive fluid left icon input"
    >
      <input
        onChange={[Function]}
        onKeyPress={[Function]}
        placeholder="Search"
        type="text"
        value="The Gulf: The Making of An American Sea"
      />
      <Icon
        as="i"
        circular={true}
        inverted={true}
        link={true}
        name="search"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="search circular inverted link icon"
          onClick={[Function]}
        />
      </Icon>
    </div>
  </Input>
</SearchBar>
`;
